--- a/wiki/dang.wikitext
+++ b/wiki/dang.wikitext
@@ -1,5 +1,15 @@
 ==English==
-===Adjective===
-'''dang''' (''no [[comparative]] or [[superlative]]'')
+===Etymology 1===
+====Verb, adjective and exclamation====
+#euphemism for [[Damn]]
 
-#(''[[euphemistic]]'') [[Damn]], [[damned]].
+===Etymology 2===
+See [[ding]]
+====Verb====
+#''(Obsolete):'' imperfect of ding
+
+===Etymology 3===
+====Transitive verb====
+#''(Obsolete):'' To [[dash]]
+#:*'''Quotations'''
+#:* Till she, o'ercome with anguish, shame, and rage, '''Danged''' down to hell her loathsome carriage - [[Christopher Marlowe]]
