/* Transitive verb */ <dang#52819>

--- a/wiki/dang.wikitext
+++ b/wiki/dang.wikitext
@@ -11,5 +11,5 @@ See [[ding]]
 ===Etymology 3===
 ====Transitive verb====
 #''(Obsolete):'' To [[dash]]
-#:*'''Quotations'''
+#:'''Quotations'''
 #:* Till she, o'ercome with anguish, shame, and rage, '''Danged''' down to hell her loathsome carriage - [[Christopher Marlowe]]
