--- a/wiki/darn.wikitext
+++ b/wiki/darn.wikitext
@@ -1,11 +1,11 @@
-=={{en}}==
+==English==
 
 ===Transitive Verb===
 # To repair by stitching with thread or yarn.
 #: ''I need to darn these socks again.''
 
-===Interjection===
-# Euphemism of [[damn dang darn durn|damn]].
+===Verb, adjective and interjection===
+# Euphemism of [[damn]].
 
 ===Related Terms===
 *[[darning needle]]
