<e pur si muove#43900>

--- a/wiki/e_pur_si_muove.wikitext
+++ b/wiki/e_pur_si_muove.wikitext
@@ -4,4 +4,5 @@
 # the words allegedly uttered by Galileo Galilei after being forced to recant [[heliocentrism]].
 ==== Translations ====
 *[[English]]: and yet it moves
+*[[German]]: und sie bewegt ssich doch!
 *[[Slovak]]: a predsa sa točí
