<e pur si muove#43900>

--- a/wiki/e_pur_si_muove.wikitext
+++ b/wiki/e_pur_si_muove.wikitext
@@ -4,5 +4,5 @@
 # the words allegedly uttered by Galileo Galilei after being forced to recant [[heliocentrism]].
 ==== Translations ====
 *[[English]]: and yet it moves
-*[[German]]: und sie bewegt ssich doch!
+*[[German]]: und sie bewegt sich doch!
 *[[Slovak]]: a predsa sa točí
