--- a/wiki/diacritic.wikitext
+++ b/wiki/diacritic.wikitext
@@ -6,7 +6,7 @@
 
 === Etymology ===
 
-:From Greek διακρητικός, distinguishing
+:From [[Greek]] διακρητικός, distinguishing
 
 === Noun ===
 '''Diacritic'''
