--- a/wiki/%E6%99%B4.wikitext
+++ b/wiki/%E6%99%B4.wikitext
@@ -47,7 +47,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せい]] (sei)
@@ -57,9 +57,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 청
+* '''[[Hangeul]]''': [[청]]
 
 * '''[[Eumhun]] reading''': 
 
