--- a/wiki/%E6%B5%AE.wikitext
+++ b/wiki/%E6%B5%AE.wikitext
@@ -11,14 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#to float, drift, waft
-*# to exceed
-*# superfluous
-
+*# to [[float]], [[drift]], [[waft]]
+*# to [[exceed]]
+*# [[superfluous]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,11 +29,74 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fau4
 
+===Compounds===
+*[[浮报]]
+*[[浮标]]
+*[[浮冰]]
+*[[浮薄]]
+*[[浮财]]
+*[[浮尘]]
+*[[浮沉]]
+*[[浮船坞]]
+*[[浮词]]
+*[[浮荡]]
+*[[浮雕]]
+*[[浮吊]]
+*[[浮动]]
+*[[浮动工资制]]
+*[[浮动汇率]]
+*[[浮泛]]
+*[[浮光掠影]]
+*[[浮华]]
+*[[浮滑]]
+*[[浮家泛宅]]
+*[[浮夸]]
+*[[浮浪]]
+*[[浮礼儿]]
+*[[浮力]]
+*[[浮露]]
+*[[浮码头]]
+*[[浮面]], [[浮面儿]]
+*[[浮名]]
+*[[浮皮]], [[浮皮儿]]
+*[[浮皮蹭痒]]
+*[[浮皮潦草]]
+*[[浮漂]]
+*[[浮萍]]
+*[[浮浅]]
+*[[浮桥]]
+*[[浮生]]
+*[[浮尸]]
+*[[浮石]]
+*[[浮水]]
+*[[浮说]]
+*[[浮筒]]
+*[[浮头]]
+*[[浮头儿]]
+*[[浮屠]], [[浮图]]
+*[[浮土]]
+*[[浮文]]
+*[[浮现]]
+*[[浮想]]
+*[[浮小麦]]
+*[[浮性]]
+*[[浮言]]
+*[[浮岩]]
+*[[浮艳]]
+*[[浮漾]]
+*[[浮游]]
+*[[浮游生物]]
+*[[浮语虚辞]]
+*[[浮云]]
+*[[浮躁]]
+*[[浮肿]]
+*[[浮子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ふ]] (fu)
