--- a/wiki/solstice.wikitext
+++ b/wiki/solstice.wikitext
@@ -9,6 +9,8 @@
 
 ====Translations====
 *Dutch: [[zonnewende]], [[zonnestilstand]]
+*Norwegian: [[solhverv]], [[sommersolhverv]], , [[vintersolhverv]]
 *Swedish: [[sommarsolstånd]] (the longest day), [[vintersolstånd]] (the shortest day)
+
 ===See also===
 *[[equinox]]
