--- a/wiki/%E6%B8%B8.wikitext
+++ b/wiki/%E6%B8%B8.wikitext
@@ -32,6 +32,60 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yau4
 
+===Compounds===
+*[[游伴]]
+*[[游标]]
+*[[游标卡尺]]
+*[[游程]]
+*[[游船]]
+*[[游荡]]
+*[[游动]]
+*[[游动哨]]
+*[[游舫]]
+*[[游逛]]
+*[[游击]]
+*[[游击队]]
+*[[游击区]]
+*[[游击战]]
+*[[游记]]
+*[[游街]]
+*[[游客]]
+*[[游览]]
+*[[游廊]]
+*[[游乐]]
+*[[游离]]
+*[[游离电子]]
+*[[游历]]
+*[[游民]]
+*[[游牧]]
+*[[游禽]]
+*[[游人]]
+*[[游刃有余]]
+*[[游山玩水]]
+*[[游手好闲]]
+*[[游水]]
+*[[游说]]
+*[[游艇]]
+*[[游玩]]
+*[[游戏]]
+*[[游侠]]
+*[[游行]]
+*[[游兴]]
+*[[游学]]
+*[[游移]]
+*[[游弋]]
+*[[游艺]]
+*[[游艺会]]
+*[[游泳]]
+*[[游泳池]]
+*[[游泳裤]]
+*[[游泳帽]]
+*[[游泳衣]]
+*[[游园会]]
+*[[游资]]
+*[[游子]]
+*[[游踪]]
+
 * '''Other info''': 
 
 ----
