--- a/wiki/%E6%B8%B8.wikitext
+++ b/wiki/%E6%B8%B8.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[逰]]
+* '''Alternate form''': [[遊]], [[逰]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 85''': [[Wiktionary:Chinese radical index 水|水]]+9 strokes
 
