fmt; made def as NPOV as I could <chav#64913>

--- a/wiki/chav.wikitext
+++ b/wiki/chav.wikitext
@@ -1,1 +1,5 @@
-Chav is a perjorative term for a rapidly growing group of under educated, over-sexed young Britainites.
+==English==
+===Noun===
+'''chav''' (''plural'' '''chavs''')
+
+#(''British, derogatory'') A member of the [[working class]] in the [[United Kingdom]] who is seen as [[under-educated]]; to have poor taste, especially in their choice of clothes; and to have poor social skills.
