--- a/wiki/%E5%A6%87.wikitext
+++ b/wiki/%E5%A6%87.wikitext
@@ -20,7 +20,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,6 +34,18 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[婦]]
+
+===Compounds===
+*[[妇产科]]
+*[[妇道]]
+*[[妇科]]
+*[[妇女]]
+*[[妇女病]]
+*[[妇女节]]
+*[[妇人]]
+*[[妇孺]]
+*[[妇婴]]
+*[[妇幼]]
 
 * '''Other info''': 
 
