restoring content <womanizer#64695>

--- a/wiki/womanizer.wikitext
+++ b/wiki/womanizer.wikitext
@@ -1,1 +1,11 @@
-#REDIRECT [[womaniser, womanizer]]
+==English==
+===Variant spellings===
+'''womaniser''' (''British'')
+===Noun===
+'''womanizer''' (''plural'' '''womanizers''')
+#A serial [[seducer]] of women.
+
+====Synonyms====
+*[[Lothario]]
+*[[player]]
+*[[Romeo]]
