--- a/wiki/womaniser.wikitext
+++ b/wiki/womaniser.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[womaniser, womanizer]]
+==English==
+===Variant spelling===
+*[[Womanizer]] ''(U.S.)''
+===Noun===
+'''womaniser''' (''plural'' '''womaniser''')
+
+#(''British'') Variant spelling of '''[[womanizer]]'''.
