--- a/wiki/thou.wikitext
+++ b/wiki/thou.wikitext
@@ -17,6 +17,9 @@ From Anglo-Saxon ''thu''; akin to German ''du''.
 ''Thou'' is used with the archaic second person singular of verbs, which usually ends in ''-st''.
 : "Lovest thou me?"
 
+===Noun===
+# 0.001 [[inch]]es (in UK English, American English uses [[mil]]) (In this context it is pronounced as the first syllable of [[thousand]].)
+
 ====Translations====
 *[[Esperanto]]: [[ci]]
 *[[French]]: [[tu]]
