--- a/wiki/womanizer.wikitext
+++ b/wiki/womanizer.wikitext
@@ -3,7 +3,7 @@
 '''womaniser''' (''British'')
 ===Noun===
 '''womanizer''' (''plural'' '''womanizers''')
-#A serial [[seducer]] of women.
+#''(U. S. variant):'' A serial [[seducer]] of women.
 
 ====Synonyms====
 *[[Lothario]]
