removed unhelpful pron; wikified etym; decapitalized headwords; adj needs its own entry - only same spellings share a page; more info -> see also; URL -> w: link for wikipedia <diacritic#64937>

--- a/wiki/diacritic.wikitext
+++ b/wiki/diacritic.wikitext
@@ -1,23 +1,14 @@
 == English ==
-
-=== Pronunciation ===
-
-:Di`a`crit´ic
-
 === Etymology ===
-
-:From [[Greek]] διακρητικός, distinguishing
+:From [[Greek]] [[διακρητικός]], distinguishing
 
 === Noun ===
-'''Diacritic'''
+'''diacritic''' ([[diacritics]])
 
 #A special mark added to a letter to indicate a different pronunciation or meaning.
 
-=== Adjective ===
-'''Diacritical'''
+====Derived terms====
+*[[diacritical]]
 
-#Capable of distinguishing or of making a distinction.
-
-=== More information ===
-
-:[http://en.wikipedia.org/wiki/Diacritic Wikipedia article on ''Diacritic'']
+=== See also ===
+*[[w:Diacritic|Wikipedia article on diacritics]]
