Adding back definition <womaniser#64730>

--- a/wiki/womaniser.wikitext
+++ b/wiki/womaniser.wikitext
@@ -4,4 +4,9 @@
 ===Noun===
 '''womaniser''' (''plural'' '''womaniser''')
 
-#(''British'') Variant spelling of '''[[womanizer]]'''.
+#(''British variant'') A serial [[seducer]] of women.
+
+====Synonyms====
+*[[Lothario]]
+*[[player]]
+*[[Romeo]]
