fmt; moved "portmantua" quotation to page for that entry <portmanteau#29>

--- a/wiki/portmanteau.wikitext
+++ b/wiki/portmanteau.wikitext
@@ -9,22 +9,25 @@ From French ''porter'', to [[carry]]; and ''manteau'', [[coat]].  (''Note that t
 ===Noun===
 '''portmanteau''' (''plural'' [[portmanteaus]] ''or'' [[portmanteaux]])
 #A large travelling case usually made of [[leather]], and opening into two equal sections.
-#:'''Quotations'''
-#:* '''ca. 1500''' Then Little John took the bishop's cloak, And spread it upon the ground, And out of the bishop's '''portmantua''', He told three hundred pound. - Anonymous: ''Robin Hood and the Bishop of Hereford'' in ''The English and Scottish Popular Ballads'' (1898)
-#:* '''1667''' Rodolphus therefore finding such an earnest Invitation, embrac'd it with thanks, and with his Servant and Portmanteau, went to Don Juan's; where they first found good Stabling for their Horses, and afterwards as good Provision for themselves. - Charles Croke, ''Fortune's Uncertainty''
 #(''linguistics'') A [[portmanteau word]]. 
-#:'''Quotations'''
-#:* '''1872''' Well, "slithy" means "lithe and slimy." "Lithe" is the same as "active." You see it's like a portmanteau--there are two meanings packed up into one word. - Lewis Carroll. ''Alice Through the Looking Glass'' - This was the first usage in this way.
+
+====Quotations====
+
+(''case'')
+*'''1667''' Rodolphus therefore finding such an earnest Invitation, embrac'd it with thanks, and with his Servant and Portmanteau, went to Don Juan's; where they first found good Stabling for their Horses, and afterwards as good Provision for themselves. - Charles Croke, ''Fortune's Uncertainty''
+
+(''portmanteau word'')
+* '''1872''' Well, "slithy" means "lithe and slimy." "Lithe" is the same as "active." You see it's like a portmanteau--there are two meanings packed up into one word. - Lewis Carroll. ''Alice Through the Looking Glass'' - This was the first usage in this way.
 
 ====Variant forms====
-*[[portmantua]]
+*(''case''): [[portmantua]]
 
 ====Synonyms====
-*(2): [[blend]], [[frankenword]], [[portmanteau word]]
+*(''portmanteau word''): [[blend]], [[frankenword]], [[portmanteau word]]
 
 ====Translations====
-''For translations of'' [[portmanteau]] ''in the linguistic sense, see'' [[portmanteau word]] <!-- Do not translate the linguistic sense here - put these translations under "portmanteau word" -->
 
+'''case'''
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -33,7 +36,7 @@ From French ''porter'', to [[carry]]; and ''manteau'', [[coat]].  (''Note that t
 *[[Breton]]: [[mal]] ''f'', [[malizenn]] ''f''
 *Bulgarian: [[голям]] [[кожен]] [[куфар]] ''m''
 *Dutch: [[koffer]] ''f'', [[valies]] ''f''
-*{{fi}}: [[matkalaukku]]
+*Finnish: [[matkalaukku]]
 *French: [[valise#French|valise]] ''f'', [[malle]] ''f''
 |}
 | width=1% |
@@ -48,12 +51,16 @@ From French ''porter'', to [[carry]]; and ''manteau'', [[coat]].  (''Note that t
 |}
 |}
 
+'''portmanteau word'''
+''See'' [[portmanteau word]]
+
 ===Adjective===
 '''portmanteau''' (''not [[comparable]]''; ''used only before a noun'')
 #(''the noun used as a [[modifier]]'') Of a word, story, ''etc'', combining two words, stories, ''etc'', in the manner of a portmanteau (in the linguistic sense).
-#:'''Quotations'''
-#:* '''2002''': The overall narrator of this '''portmanteau''' story - for Dickens co-wrote it with five collaborators on his weekly periodical, ''All the Year Round'' - expresses deep, rational scepticism about the whole business of haunting. - Nicholas Lezard, ''Spooky tales by the master and friends'' in ''The Guardian'' (London) (December 14, 2002) Page 30.
-#:*'''2002''' We're so bombarded with images, it's a struggle to preserve our imaginations.' In response, he's turned to cinema, commissioning 11 film-makers to contribute to a '''portmanteau''' film, entitled '11'09"01' and composed of short films each running 11 minutes, nine seconds and one frame. - Nick Bradshaw, ''One day in September'' in ''Time Out'' (December 11, 2002) Page 71.
+
+====Quotations====
+*'''2002''': The overall narrator of this '''portmanteau''' story - for Dickens co-wrote it with five collaborators on his weekly periodical, ''All the Year Round'' - expresses deep, rational scepticism about the whole business of haunting. - Nicholas Lezard, ''Spooky tales by the master and friends'' in ''The Guardian'' (London) (December 14, 2002) page 30.
+*'''2002''' We're so bombarded with images, it's a struggle to preserve our imaginations.' In response, he's turned to cinema, commissioning 11 film-makers to contribute to a '''portmanteau''' film, entitled '11'09"01' and composed of short films each running 11 minutes, nine seconds and one frame. - Nick Bradshaw, ''One day in September'' in ''Time Out'' (December 11, 2002) Page 71.
 
 ===Related terms===
 *[[portmanteau film]]
