--- a/wiki/supercalifragilisticexpialidocious.wikitext
+++ b/wiki/supercalifragilisticexpialidocious.wikitext
@@ -9,3 +9,4 @@ A memorable nonsense word from the movie [http://en.wikipedia.org/wiki/Mary_Popp
 ===Notes===
 *It is popularly believed that '''supercalifragilisticexpialidocious''' is the longest word in the English language, but there are longer words.  The "actual" longest word is disputed.  See [[w:Longest word in English|the Wikipedia article on the longest word in the English language]] for more details.
 *In 1965 there was a copyright case over the song ("SUPERCALAFAJALISTICKEXPEEALADOJUS" versus "SUPERCALIFRAGILISTICEXPIALIDOCIOUS", more properly Life Music Inc. v. Wonderland Music Co., 241 F. Supp. 653 (S.D.N.Y. 1965)) (see for example [[http://www.law.berkeley.edu/journals/btlj/articles/vol8/Beard/html/note.html]]) in which the court ruled that the word had been in use in the general public for some years before the either song was written.
+*It is disputed that supercalifragilisticexpialidocious is a fictitious word and should not be/is not in the dictionary. As such, it is debatable as to whether it can run for the longest English word.
