treated as variant spelling <life-time#55560>

--- a/wiki/life-time.wikitext
+++ b/wiki/life-time.wikitext
@@ -1,4 +1,3 @@
-{{cleanup}}
-
-'''Life-time''' is a concept related to the definition of one's time of life.
-Used in contexts like: "he accomplished much through out his life-time", or "he will be put away in jail for life-time" , refers to the actuall length of the persons life. Thought it must be said that the prison sentence "life-Time", does not always mean life-time litteraly. Some countries have prisonsentences called life-time that is indeed not until the prisoners death.
+==English==
+===Noun===
+#variant spelling of [[lifetime]]
