--- a/wiki/research.wikitext
+++ b/wiki/research.wikitext
@@ -2,20 +2,21 @@
 ===Noun===
 ====Translations====
 *Finnish: [[tutkimus]]
+*French: [[recherche]]
 *German: [[Forschung]]
 *Swedish: [[undersökning]] ''c'', [[forskning]] ''c''
 
+
 ===Verb===
 ====Translations====
+*French: [[examiner]], [[explorer]], [[fouiller]], [[rechercher]]
+*Portuguese: [[buscar]], [[explorar]], [[investigar]]
 *Swedish: [[undersöka]], [[forska]]
-
 
 
 -----
 '''Which part of speech are these?'''
 *Dutch: [[speurtocht]], [[speurwerk]], [[exploreren]], [[nagaan]], [[onderzoeken]], [[uitvissen]], [[uitzoeken]], [[onderzoek]], [[speurwerk]]
-*French: [[recherche]], [[examiner]], [[explorer]], [[fouiller]], [[rechercher]]
-*Portuguese: [[buscar]], [[explorar]], [[investigar]]
 
 
 {{cleanup}}
