--- a/wiki/alloy.wikitext
+++ b/wiki/alloy.wikitext
@@ -29,6 +29,7 @@
 ====Translations====
 *Dutch: [[legeren]] *[[w:IPA|IPA]]: /lε'gerən/
 *Finnish: [[sekoittaa]]
+*German: [[legieren]]
 *Slovak: [[zliať]]
 *Swedish: [[legera]]
 
