--- a/wiki/%E8%AE%B0.wikitext
+++ b/wiki/%E8%AE%B0.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#record
-*# keep in mind, remember
-
+*# [[record]]
+*# keep in mind, [[remember]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +32,44 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[記]]
+
+===Compounds===
+*[[记不得]]
+*[[记不清]]
+*[[记不住]]
+*[[记仇]]
+*[[记得]]
+*[[记得住]]
+*[[记分]], [[记分儿]]
+*[[记工]]
+*[[记功]]
+*[[记挂]]
+*[[记过]]
+*[[记号]]
+*[[记恨]]
+*[[记录]]
+*[[记录片儿]]
+*[[记录片]]
+*[[记名]]
+*[[记念]]
+*[[记清]]
+*[[记取]]
+*[[记认]]
+*[[记事]]
+*[[记事儿]]
+*[[记述]]
+*[[记诵]]
+*[[记下来]]
+*[[记性]]
+*[[记叙]]
+*[[记叙文]]
+*[[记要]]
+*[[记忆]]
+*[[记忆力]]
+*[[记载]]
+*[[记账]]
+*[[记者]]
+*[[记住]]
 
 * '''Other info''': 
 
