--- a/wiki/%E4%BD%A0.wikitext
+++ b/wiki/%E4%BD%A0.wikitext
@@ -29,6 +29,14 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': nei5
 
+===Compounds===
+*[[你来我往]]
+*[[你们]]
+*[[你死我活]]
+*[[你我]]
+*[[你争我夺]]
+*[[你追我赶]]
+
 * '''Other info''': 
 
 ----
