--- a/wiki/%E7%90%86.wikitext
+++ b/wiki/%E7%90%86.wikitext
@@ -30,6 +30,41 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': lei5
 
+===Compounds===
+*[[理财]]
+*[[理睬]]
+*[[理茬儿]]
+*[[理当]]
+*[[理短]]
+*[[理发]]
+*[[理该]]
+*[[理合]]
+*[[理化]]
+*[[理会]]
+*[[理家]]
+*[[理解]]
+*[[理科]]
+*[[理亏]]
+*[[理疗]]
+*[[理路]]
+*[[理乱]]
+*[[理论]]
+*[[理气]]
+*[[理屈]]
+*[[理屈词穷]]
+*[[理事]]
+*[[理顺]]
+*[[理所当然]]
+*[[理想]]
+*[[理性]]
+*[[理性认识]]
+*[[理学]]
+*[[理应]]
+*[[理由]]
+*[[理喻]]
+*[[理直气壮]]
+*[[理智]]
+
 * '''Other info''': 
 
 ----
