--- a/wiki/%E4%BD%93.wikitext
+++ b/wiki/%E4%BD%93.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#body
+*# [[body]]
 *# group, class, body, unit
 *# inferior
 
-
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -35,11 +34,64 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[體]]
 
+===Compounds===
+*[[体表]]
+*[[体裁]]
+*[[体操]]
+*[[体察]]
+*[[体尝]]
+*[[体词]]
+*[[体大思精]]
+*[[体罚]]
+*[[体格]]
+*[[体会]]
+*[[体积]]
+*[[体检]]
+*[[体力]]
+*[[体力劳动]]
+*[[体例]]
+*[[体谅]]
+*[[体貌]]
+*[[体面]]
+*[[体念]]
+*[[体膨胀]]
+*[[体魄]]
+*[[体腔]]
+*[[体式]]
+*[[体态]]
+*[[体坛]]
+*[[体贴]]
+*[[体统]]
+*[[体味]]
+*[[体温]]
+*[[体温表]]
+*[[体温计]]
+*[[体无完肤]]
+*[[体惜]]
+*[[体系]]
+*[[体现]]
+*[[体刑]]
+*[[体形]]
+*[[体型]]
+*[[体恤]]
+*[[体癣]]
+*[[体循环]]
+*[[体验]]
+*[[体液]]
+*[[体育]]
+*[[体育场]]
+*[[体育馆]]
+*[[体育运动]]
+*[[体征]]
+*[[体制]]
+*[[体质]]
+*[[体重]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[てい]] (tei), [[たい]] (tai), [[ほん]] (hon)
