--- a/wiki/numpty.wikitext
+++ b/wiki/numpty.wikitext
@@ -1,2 +1,3 @@
+==Scots==
 == Noun ==
-# ''(Chiefly Scottish)'' A person that embarrasses themselves by making a mistake based on ignorance.
+# A person that embarrasses themselves by making a mistake based on ignorance.
