added 1913 Webster <addiction#40545>

--- a/wiki/addiction.wikitext
+++ b/wiki/addiction.wikitext
@@ -1,1 +1,12 @@
-Noun form of [[addict]].  The state of being addicted.
+==Englist==
+
+===Etymology===
+[[Cf.]] Latin ''addictio'' an [[adjudje|adjudging]]
+
+===Noun===
+#The state of being [[addict]]ed; [[devotion]]; [[inclination]].
+#:*His addiction was to courses vain. ''[[Shakespeare]]''.
+
+
+----
+{{webster}}
