--- a/wiki/%E7%84%BC.wikitext
+++ b/wiki/%E7%84%BC.wikitext
@@ -13,50 +13,20 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#burn
-*# bake
-*# heat
-*# roast
-
-
-----
-
-== [[Chinese]] [[Hanzi]] ==
-
-* '''Romanizations'''
-** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': shāo (shao1)
-*** '''[[Wade-Giles]]''': shao<sup>1</sup>
-*** '''[[Yale]]''': 
-** '''[[Cantonese]]'''
-*** '''[[Jyutping]]''':
-*** '''[[Penkyamp]]''': 
-*** '''[[Yale]]''': 
-
-* '''Other info''': 
+*# [[burn]]
+*# [[bake]]
+*# [[heat]]
+*# [[roast]]
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しょう]] (shō)
 ** '''[[Kun]]''': [[やく]] (yaku), [[やき]] (yaki)
 
 * '''Other info''':  
-
-----
-
-== [[Korean]] [[Hanja]] ==
-
-* '''[[Hangeul]]''': 소
-
-* '''[[Eumhun]] reading''': 
-
-* '''Romanizations'''
-** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': so
-** '''[[McCune-Reischauer]]''': so
-** '''[[Yale]]''': so
 
 ----
 
