--- a/wiki/adductor.wikitext
+++ b/wiki/adductor.wikitext
@@ -1,3 +1,14 @@
+==English==
+
+===Etymology===
+Latin, from ''adducere''.
+
+===Noun===
+#(''[[Anatomy]]'') A [[muscle]] which draws a [[limb]] or part of the [[body]] toward the [[middle]] line of the body, or closes extended parts of the body; -- opposed to [[abductor]]; as, the adductor of the [[eye]], which turns the eye toward the nose.
+#:*In the bivalve shells, the muscles which close the values of the shell are called '''adductor''' muscles. ''[[Verrill]]''.
+
+
+
 ----
 
 ==[[Romanica]]==
