--- a/wiki/adduction.wikitext
+++ b/wiki/adduction.wikitext
@@ -1,3 +1,14 @@
+==English==
+
+===Etymology===
+[[Cf.]] French ''[[adduction]]''. See [[Adduce]].
+
+===Transitive Verb===
+#The act of adducing or bringing forward.
+#:*An '''adduction''' of facts gathered from various quarters. ''I. Taylor''.
+#(''[[Physiology]]'') The action by which the parts of the [[body]] are drawn towards its [[axis]]; -- opposed to [[abduction]]. ''[[Dunglison]]''. 
+
+
 ----
 
 ==[[Romanica]]==
