--- a/wiki/syncretistic.wikitext
+++ b/wiki/syncretistic.wikitext
@@ -1,1 +1,1 @@
-To merge to previous groups of ideals or organizations into one. (Common uses: religion and language).
+To merge to previous groups of ideals or organizations into one. (Common uses: to describe the merging of religions or languages).
