--- a/wiki/happen.wikitext
+++ b/wiki/happen.wikitext
@@ -19,6 +19,7 @@
 *Portuguese: [[acontecer]]
 *Russian: [[случиться]] (sluchit'sya)
 *Spanish: [[suceder]], [[ocurir]]
+*Swedish: [[hända]]
 
 ----
 
