--- a/wiki/happen.wikitext
+++ b/wiki/happen.wikitext
@@ -9,6 +9,7 @@
 
 ====Translations====
 *Chinese: [[發生]], [[发生]]
+*Danish: [[ske]]
 *Dutch: [[gebeuren]]
 *French: [[arriver]], [[se produire]]
 *German: [[geschehen]]
@@ -19,7 +20,7 @@
 *Portuguese: [[acontecer]]
 *Russian: [[случиться]] (sluchit'sya)
 *Spanish: [[suceder]], [[ocurir]]
-*Swedish: [[hända]]
+*Swedish: [[hända]], [[ske]]
 
 ----
 
@@ -33,3 +34,5 @@
 '''happen'''
 
 # plural of [[hap]]
+
+[[sv:happen]]
