--- a/wiki/noha.wikitext
+++ b/wiki/noha.wikitext
@@ -9,7 +9,8 @@
 #a support device similar to such a limb, such as a [[leg]] of a table or a bed
 ===Derived Words===
 * [[nohavice]] ''f pl''
-* [[nožička]] ''f''
-* [[nožisko]] ''n''
-* [[nôžka]] ''f''
-* [[nožný]] -á -é
+* [[nozˇicˇka]] ''f''
+* [[nozˇisko]] ''n''
+* [[nôzˇka]] ''f''
+* [[nozˇny´]] -á -é
+also means Mind in arabic
