+RP IPA; expanded def; +Wikipedia link <spork#64980>

--- a/wiki/spork.wikitext
+++ b/wiki/spork.wikitext
@@ -1,7 +1,13 @@
+==English==
 === Pronunciation ===
-*[[w:IPA|IPA]]: /spork/
+*[[IPA]]
+**[[RP]]: /spɔː(r)k/
+**[[WEAE]]: /spork/
 
 === Noun ===
-'''spork''' (plural: [[sporks]])
+'''spork''' (''plural'' '''[[sporks]]''')
 
-# A [[spoon]] [[fork]] [[hybrid]].
+# A eating [[utensil]] shaped like a spoon, the bowl of which is divided into [[prong]]s like those a fork, and so has the function of both [[implement]]s; some sporks have a [[serrated]] edge and so also function as a [[knife]].
+
+===See also===
+*[[w:spork|Wikipedia article on the spork]]
