+etym, trademark status <spork#64980>

--- a/wiki/spork.wikitext
+++ b/wiki/spork.wikitext
@@ -1,4 +1,7 @@
 ==English==
+===Etymology===
+[[Blend]] of '''[[spoon]]''' and '''[[fork]]'''; originally a [[trademark]]
+
 === Pronunciation ===
 *[[IPA]]
 **[[RP]]: /spɔː(r)k/
@@ -10,4 +13,5 @@
 # A eating [[utensil]] shaped like a spoon, the bowl of which is divided into [[prong]]s like those a fork, and so has the function of both [[implement]]s; some sporks have a [[serrated]] edge and so also function as a [[knife]].
 
 ===See also===
+*[[splade]]
 *[[w:spork|Wikipedia article on the spork]]
