Changed definitions list. <conterminous#64989>

--- a/wiki/conterminous.wikitext
+++ b/wiki/conterminous.wikitext
@@ -3,6 +3,5 @@
 ===Noun===
 '''coterminous'''
 
-#[[Coterminous]].
-#:''Referring to property leases which are linked or related and expire together.''
-#:''City districts or boroughs which match existing boundaries, such as counties.''
+#Referring to property leases which are linked or related and expire together.
+#City districts or boroughs which match existing boundaries, such as counties.
