NPOV pronunciation:  historically this word had /p/ (cf. middle English "diptonge"); /f/ is an innovation reimported from the greek <diphthong#7873>

--- a/wiki/diphthong.wikitext
+++ b/wiki/diphthong.wikitext
@@ -1,6 +1,6 @@
 ===pronunciation===
 :[[International Phonetic Alphabet|IPA]]: /ˈdɪf θɒŋ/
-::(often ''mis''pronounced /ˈdɪp θɒŋ/)
+::(often pronounced /ˈdɪp θɒŋ/)
 :[[SAMPA]]: /"dIf TQN/
 
 
