--- a/wiki/autotheistic.wikitext
+++ b/wiki/autotheistic.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+Probably coined by Michael Peacock.  The word was first circulated in print in an anonymous underground satirical history of the 629 MI Batalion's deployment to Bosnia in 2000.  
+
 ===Adjective===
 '''autotheistic''', '''more autotheistic''', '''most autotheistic'''
 
