--- a/wiki/%E8%84%B1.wikitext
+++ b/wiki/%E8%84%B1.wikitext
@@ -16,7 +16,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,70 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[脫]]
+
+===Compounds===
+*[[脱靶]]
+*[[脱产]]
+*[[脱臭]]
+*[[脱出]]
+*[[脱党]]
+*[[脱档]]
+*[[脱发]]
+*[[脱肛]]
+*[[脱岗]]
+*[[脱稿]]
+*[[脱钩]]
+*[[脱谷]]
+*[[脱轨]]
+*[[脱货]]
+*[[脱缰之马]]
+*[[脱胶]]
+*[[脱节]]
+*[[脱臼]]
+*[[脱空]]
+*[[脱口成章]]
+*[[脱口而出]]
+*[[脱口秀]]
+*[[脱离]]
+*[[脱离速度]]
+*[[脱粒]]
+*[[脱漏]]
+*[[脱落]]
+*[[脱盲]]
+*[[脱毛]]
+*[[脱卯]]
+*[[脱帽]]
+*[[脱敏]]
+*[[脱难]]
+*[[脱皮]]
+*[[脱贫]]
+*[[脱贫致富]]
+*[[脱期]]
+*[[脱浅]]
+*[[脱壳]]
+*[[脱洒]]
+*[[脱色]]
+*[[脱身]], [[脱身儿]]
+*[[脱湿]]
+*[[脱手]]
+*[[脱水]]
+*[[脱俗]]
+*[[脱榫]]
+*[[脱胎]]
+*[[脱胎换骨]]
+*[[脱逃]]
+*[[脱兔]]
+*[[脱位]]
+*[[脱误]]
+*[[脱险]]
+*[[脱销]]
+*[[脱卸]]
+*[[脱盐]]
+*[[脱氧核糖核酸]]
+*[[脱颖而出]]
+*[[脱脂]]
+*[[脱脂棉]]
+*[[脱脂纱布]]
 
 * '''Other info''': 
 
