--- a/wiki/diphthong.wikitext
+++ b/wiki/diphthong.wikitext
@@ -10,6 +10,7 @@
 :''see also'' the Wikipedia article on [[w:diphthong|diphthongs]].
 
 === Translations ===
-*[[Italian]]: [[dittongo]] ''m''
-
+*French: [[diphtongue]] ''f''
+*Italian: [[dittongo]] ''m''
+*Japanese: [[二重母音]]
 [[la:diphthong]]
