--- a/wiki/%E6%92%92.wikitext
+++ b/wiki/%E6%92%92.wikitext
@@ -11,34 +11,62 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#release, cast away, let go
-*# disperse
-*# relax
-
+*# [[release]], cast away, [[let]] go
+*# [[disperse]]
+*# [[relax]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': sǎ (sa3)
-*** '''[[Wade-Giles]]''': sa<sup>3</sup>
+*** '''[[Pinyin]]''': sā (sa1), sǎ (sa3)
+*** '''[[Wade-Giles]]''': sa<sup>1</sup>, sa<sup>3</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': saat3
 
+===Compounds===
+#sā
+#*[[撒把]]
+#*[[撒旦]]
+#*[[撒刁]]
+#*[[撒欢儿]]
+#*[[撒谎]]
+#*[[撒娇]], [[撒娇儿]]
+#*[[撒酒疯]], [[撒酒疯儿]]
+#*[[撒科打诨]]
+#*[[撒拉族]]
+#*[[撒赖]]
+#*[[撒尿]]
+#*[[撒泼]]
+#*[[撒气]]
+#*[[撒手]]
+#*[[撒手锏]]
+#*[[撒腿]]
+#*[[撒网]]
+#*[[撒窝]]
+#*[[撒鸭子]], [[撒丫子]]
+#*[[撒野]]
+#sǎ
+#*[[撒播]]
+#*[[撒施]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[さん]] (san), [[さつ]] (satsu)
 ** '''[[Kun]]''': [[まく]] (maku)
+
+===Compounds===
+*[[撒水]]
 
 * '''Other info''':  
 
