--- a/wiki/argumentum_ad_crumenam.wikitext
+++ b/wiki/argumentum_ad_crumenam.wikitext
@@ -1,7 +1,7 @@
 '''Argumentum ad crumenam''' is a [[logical fallacy]] of thinking a conclusion is correct because the person making the argument is rich.
 
 :Example:
-:''If you're so smart, why aren't you rich?
+:''If you're so smart, why aren't you rich?''
 :''I think Mary is a good role model. She's pretty rich so she must be doing something right.''
 
 This fallacy is notably prevelant in art, movie, video game, or music criticism; in the form "you can try and critize product X but it makes millions so you don't count". 
