--- a/wiki/merda.wikitext
+++ b/wiki/merda.wikitext
@@ -1,6 +1,6 @@
 ==Italian==
 ===Noun===
-'''merda''' ''f'' (''vulgar slang'')
+'''mierda''' ''f'' (''vulgar slang'')
 
 # [[shit]]
 # (''figuratively'') piece of crap, piece of shit, load of crap, load of shit
