--- a/wiki/incense.wikitext
+++ b/wiki/incense.wikitext
@@ -14,9 +14,10 @@
 *{{ko}}: [[향]]
 *{{pl}}: [[kadzidło]] ''n''
 *{{ru}}: [[ладан]] ''m''
+*{{sa}}: [[धूपं]], dhUpam
 
 ===Verb===
-'''to cense''' ([[censed]], censed)
+'''to cense''' ([[cense]], censed)
 
 ====Translations====
 *Dutch: [[wieroken]]
