added meanings <research#37494>

--- a/wiki/research.wikitext
+++ b/wiki/research.wikitext
@@ -1,13 +1,24 @@
 ==English==
+===Etymology===
+Prefix [[re-]] + [[search]]: compare for noun: Old French ''[[recerche]]'', French ''[[recherche]]''; for verb: Old French ''[[recerchier]]'', French ''[[rechercher]]''
 ===Noun===
+#Diligent inquiry or examination in seeking facts or principles; laborious or continued search after truth; as, researches of human wisdom.
+#:'''Quotations'''
+#:*The dearest interests of parties have frequently been staked on the results of the '''researches''' of antiquaries. - [[Thomas Babington Macaulay]]
+====Synonyms====
+*[[investigation]]
+*[[examination]]
+*[[inquiry]]
+*[[scrutiny]]
+
 ====Translations====
 *Finnish: [[tutkimus]]
 *French: [[recherche]]
 *German: [[Forschung]]
 *Swedish: [[undersökning]] ''c'', [[forskning]] ''c''
 
-
-===Verb===
+===Transitive verb===
+#To search or examine with continued care; to seek diligently.
 ====Translations====
 *French: [[examiner]], [[explorer]], [[fouiller]], [[rechercher]]
 *Portuguese: [[buscar]], [[explorar]], [[investigar]]
@@ -17,6 +28,5 @@
 -----
 '''Which part of speech are these?'''
 *Dutch: [[speurtocht]], [[speurwerk]], [[exploreren]], [[nagaan]], [[onderzoeken]], [[uitvissen]], [[uitzoeken]], [[onderzoek]], [[speurwerk]]
-
 
 {{cleanup}}
