--- a/wiki/meow.wikitext
+++ b/wiki/meow.wikitext
@@ -17,6 +17,7 @@
 *Interlingua: [[miau]]
 *Japanese: [[にゃ]]
 *Korean: [[야옹]]
+*Norwegian: [[mjau]]
 *Romanian: [[miau]]
 *Russian: [[мяу]]
 *Spanish: [[miau]], [[maullido]]
@@ -39,6 +40,7 @@
 * {{de}}: [[miauen]], [[maunzen]]
 *Interlingua: [[miaular]]
 *Italian: [[miagolare]]
+*Norwegian: [[mjaue]]
 *Romanian: [[a miauna]]
 *Spanish: [[maullar]]
 *Swedish: [[jama]]
