--- a/wiki/measurand.wikitext
+++ b/wiki/measurand.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 '''measurand'''
-# A quantity which is or will be [[measure|measured]]
+# A quantity which can be determined by [[measurement]]
