--- a/wiki/smith.wikitext
+++ b/wiki/smith.wikitext
@@ -17,6 +17,9 @@
 *Slovak: [[kováč]] ''m'', [[kováčka]] ''f''
 *Swedish: [[smed]] ''c''
 
+===Etymology===
+From German [[Schmidt]], [[Schmitt]].
+
 ===Proper noun===
 '''Smith'''
 
