/* Related terms */ smithy <smith#38976>

--- a/wiki/smith.wikitext
+++ b/wiki/smith.wikitext
@@ -5,10 +5,12 @@
 
 ====Related terms====
 <!-- [[smithereens]] ? -->
-<!-- [[smithy]] ? -->
+*[[smithy]] or [[smiddy]]
+*[[smithery]]
 *[[blacksmith]]
 *[[goldsmith]]
 *[[silversmith]]
+*[[swordsmith]]
 *[[tinsmith]]
 
 ====Translations====
