--- a/wiki/megalomania.wikitext
+++ b/wiki/megalomania.wikitext
@@ -1,6 +1,8 @@
-'''ENGLISH'''
+== English ==
 
-''NOUN''
+== Noun ==
+
+'''Megalomania'''
 
 A psychopathological condition characterized by delusional fantasies of wealth, power, or omnipotence. 
 
