--- a/wiki/megalomaniac.wikitext
+++ b/wiki/megalomaniac.wikitext
@@ -1,5 +1,7 @@
-'''ENGLISH'''
+== English ==
 
-''NOUN''
+== Noun ==
 
-One affected with or exhibiting megalomania
+'''Megalomaniac'''
+
+One affected with or exhibiting [[megalomania]]
