--- a/wiki/aconitum.wikitext
+++ b/wiki/aconitum.wikitext
@@ -3,3 +3,4 @@ Latin See [[aconite]]
 ===Noun===
 #The poisonous herb aconite; also, an extract from it. 
 #*Strong As '''aconitum''' or rash gunpowder. - Shakespeare, ''Henry IV, Part 2'', IV,iv
+#A genus of plants in the family [[Ranunculaceae]].
