--- a/wiki/corruption.wikitext
+++ b/wiki/corruption.wikitext
@@ -1,5 +1,6 @@
 ===Etymology===
 French ''corruption'', Latin ''[[corruptio]]''
+===Noun===
 #The act of corrupting or making [[putrid]], or state of being [[corrupt]] or putrid; decomposition or disorganization, in the process of putrefaction; [[putrefaction]]; [[deterioration]].
 #*The inducing and accelerating of putrefaction is a subject of very universal inquiry; for '''corruption''' is a reciprocal to generation. - [[Francis Bacon]].
 #The product of corruption; putrid matter.
