--- a/wiki/corruption.wikitext
+++ b/wiki/corruption.wikitext
@@ -13,7 +13,7 @@ French ''corruption'', Latin ''[[corruptio]]''
 *'''Corruption of blood,''' ''(Law):'' taint or impurity of blood, in consequence of an act of attainder of treason or felony, by which a person is disabled from inheriting any estate or from transmitting it to others.
 **'''Corruption of blood''' can be removed only by act of Parliament. - [[Blackstone]]
 ====Synonyms====
-*[[Putrescence]]
+*[[putrescence]]
 *[[putrefaction]]
 *[[defilement]]
 *[[contamination]]
