--- a/wiki/%E0%A4%B8%E0%A4%B9.wikitext
+++ b/wiki/%E0%A4%B8%E0%A4%B9.wikitext
@@ -2,6 +2,6 @@
 ==Indeclinable==
 
 सह
-# '''p''' with (with instrumental)
+# ''prep'' with (with instrumental, in the sense of accompanied by)
 
 सा [[अहम्|मया]] सह [[गम्|गच्छेतु]]
