--- a/wiki/%E0%A4%B8%E0%A4%B9.wikitext
+++ b/wiki/%E0%A4%B8%E0%A4%B9.wikitext
@@ -1,7 +1,7 @@
-===Sanskrit===
-==Indeclinable==
+==Sanskrit==
+===Preposition===
 
 सह
-# ''prep'' with (with instrumental, in the sense of accompanied by)
+# [[with]] (with instrumental, in the sense of accompanied by)
 
 सा [[अहम्|मया]] सह [[गम्|गच्छेतु]]
