--- a/wiki/%E0%A4%AE%E0%A5%87%E0%A4%98.wikitext
+++ b/wiki/%E0%A4%AE%E0%A5%87%E0%A4%98.wikitext
@@ -1,6 +1,6 @@
-===Sanskrit===
-==Noun==
-मेघ
+==Sanskrit==
+===Noun===
+मेघ ''m''
 
-# ''m'' a cloud
-मेघा[[आकाश|काशे]] भ्राम्यन्ति।
+# a [[cloud]]
+#:मेघा[[आकाश|काशे]] भ्राम्यन्ति।
