--- a/wiki/%E0%A4%B8%E0%A4%B9.wikitext
+++ b/wiki/%E0%A4%B8%E0%A4%B9.wikitext
@@ -3,5 +3,4 @@
 
 सह
 # [[with]] (with instrumental, in the sense of accompanied by)
-
-सा [[अहम्|मया]] सह [[गम्|गच्छेतु]]
+#:सा [[अहम्|मया]] सह [[गम्|गच्छेतु]]
