--- a/wiki/%E6%8C%96.wikitext
+++ b/wiki/%E6%8C%96.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': dig, dig out, gouge out, scoop
+* '''Common Meaning''': [[dig]], dig out, gouge out, scoop
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,28 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': waat3
 
+===Compounds===
+*[[挖补]]
+*[[挖槽机]]
+*[[挖掉]]
+*[[挖耳]]
+*[[挖角]], [[挖角儿]]
+*[[挖掘]]
+*[[挖掘机]]
+*[[挖空心思]]
+*[[挖苦]]
+*[[挖泥船]]
+*[[挖潜]]
+*[[挖墙脚]]
+*[[挖肉补疮]]
+*[[挖通]]
+*[[挖土机]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[あつ]] (atsu), [[あち]] (achi)
