--- a/wiki/sky.wikitext
+++ b/wiki/sky.wikitext
@@ -34,6 +34,7 @@
 *[[Manchu]]: [[abka]]
 *Polish: [[niebo]] ''m'', [[niebiosa]] ''pl'' (4), [[firmament]] ''m'' (2)
 *Romanian: [[cer]] ''n''
+*Sanskrit: [[आकाश]]
 *Slovene: [[nebo]] ''n''
 *Spanish: [[cielo]] ''m''
 *Swedish: [[himmel]] ''c'' (1,2,3,4), [[sky]] ''c'' (1,3)
