--- a/wiki/Marathi.wikitext
+++ b/wiki/Marathi.wikitext
@@ -27,6 +27,8 @@
 {|
 :*{{mr}}: [[मराठी]] (marāṭhī)
 :*{{ne}}: [[मराठी]]
+:*{{nn}}: [[marathi]]
+:*{{no}}: [[marathi]]
 :*{{fa}}: [[ماراتي]]
 :*{{pl}}: [[Marathi]]
 :*{{es}}: [[marathi]]
