--- a/wiki/mammoth.wikitext
+++ b/wiki/mammoth.wikitext
@@ -3,7 +3,7 @@
 '''mammoth''' (''plural'' '''mammoths''')
 
 #A large, hairy, extinct [[elephant]]-like mammal.
-
+#(''figurative'') Something very large of its kind
 ====Translations====
 
 *Chinese: [[猛犸]]
