--- a/wiki/exclusive.wikitext
+++ b/wiki/exclusive.wikitext
@@ -1,2 +1,3 @@
 =Adjective=
-# Special and restricted; Limited in viability
+#(''literal'') Excluding items or members that do not meet certain conditions.
+#(''figurative'') Referring to a membership organisation or commercial product: of high quality, for superior members only. A snobbish usage. Implies, not necessarily truly, that members who do not meet requirements, which may be financial, of celebrity, religion, skin colour, etc., are excluded.
