--- a/wiki/fou.wikitext
+++ b/wiki/fou.wikitext
@@ -1,6 +1,6 @@
 ==French==
 ===Adjective===
-'''fou''' ''m'', (''m'' '''[[fol]]]''' (''used before a vowel''), ''f'' '''[[folle]]''', ''m plural'' '''fous''', ''f plural'' '''folles''')
+'''fou''' ''m'', (''m'' '''[[fol]]''' (''used before a vowel''), ''f'' '''[[folle]]''', ''m plural'' '''fous''', ''f plural'' '''folles''')
 
 #[[mad]], [[crazy]]
 
@@ -11,5 +11,7 @@
 #[[jester]]
 #(''chess'') [[bishop]]
 
-===See also===
+===Related terms===
+*[[folie]]
 *[[folle]]
+[[ja:fou]]
