fix fmt; rel++ <wonderful#64054>

--- a/wiki/wonderful.wikitext
+++ b/wiki/wonderful.wikitext
@@ -1,8 +1,10 @@
 ==English==
-===Adjective==
+===Adjective===
 '''wonderful'''
 
 #Adapted to excite [[wonder]] or [[admiration]]; [[surprising]]; [[strange]]; [[astonishing]].
 
 ===Related terms===
+*[[wonder]]
 *[[wonderfully]]
+*[[wondrous]]
